--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.14.0"
+    "node": "14.14.0",
+    "npm": "6.14.8"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
